CIM Questionnaire Change History

For full release notes, please see https://earthsystemcog.org/projects/es-doc-models/releases_questionnaire

v0.15.0.1
* ensured "read-only" forms do not require authentication
* ensured _all_ legacy dycore URLs map to appropriate views
* fixed bug w/ modifying scientific category customizations

v0.15.0.0
* major rewrite of the customizer forms including:
** clean separation of client & server functionality
** ensuring that a virtual environment can be used when run under Apache
** django-rest-framework (to provide a full-featured RESTful API)
** angular.js (to provide a full-featured client framework for complex user interactions)
** djangular (mixes Django forms w/ Angular forms)
** bootstrap (makes everything pretty)
** less (makes bootstrap customizable)
** django-compressor (minimizes - and compiles - static files)

v0.14.0.0
* removed ability for subforms to point to existing db instances
* added support for references

v0.13.1.1
* ensured the viewer form is read-only

v0.13.1.0
* prevented incomplete documents from being published
* added ability to view "completion status" of document

v0.13.0.0
* optimized customizer form by only loading content on-demand
* refactored category customization code in light of the above change

v0.12.2.0

* rewrote custom EnumerationField class; changed the way that drop-down menus function
* redesigned Project Index Page
* ensured changing a customization propagates to existing documents
* fixed issues w/ inheritance
* caching of inherited data and created models is done on a per-view basis (rather than per-user)


v0.12.1.0

* fixed errors in serialization
* fixed errors w/ saving non-loaded property formsets

v0.12.0.0

* restructured testing framework to use fixtures
* optimized editor form by only loading content on-demand
* improved help text as needed
* support for dynamic sites
* added "version" attribute to MetadataVersion

v0.11.3.4
